--- a/package.json
+++ b/package.json
@@ -25,14 +25,11 @@
 		"url": "https://github.com/roblox-ts/rbx-roact-rodux"
 	},
 	"devDependencies": {
-		"@rbxts/compiler-types": "^1.3.3-types.1",
-		"@rbxts/roact": "^1.4.4-ts.0",
-		"@rbxts/rodux": "^3.0.0-ts.3",
-		"@rbxts/types": "^1.0.648"
+    	"@rbxts/roact": "npm:@rbxts/react-ts@^1.0.1",
+		"@rbxts/rodux": "^3.0.0-ts.3"
 	},
 	"peerDependencies": {
-		"@rbxts/roact": "^1.4.4-ts.0",
-		"@rbxts/rodux": "^3.0.0-ts.3",
-		"@rbxts/types": "^1.0.627"
+    	"@rbxts/roact": "npm:@rbxts/react-ts@^1.0.1",
+		"@rbxts/rodux": "^3.0.0-ts.3"
 	}
 }
