--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"url": "https://github.com/roblox-ts/rbx-roact-rodux"
 	},
 	"devDependencies": {
-		"@rbxts/roact": "github:st-Wook/rbxts-react#main",
+		"@rbxts/roact": "github:st-Wook/rbx-roact#master",
 		"@rbxts/rodux": "github:st-Wook/rbx-rodux#master",
 		"prettier": "^3.0.3"
 	},
